--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <span class="font-semibold text-white">Portfolio Analyzer</span>
       </div>
       <div class="flex items-center gap-4">
+        <a href="index-v2.html" class="text-sm text-gray-400 hover:text-white transition-colors">v2 - Efficient Frontier →</a>
         <a href="bitcoin-backed-lending-101.html" class="text-sm text-gray-400 hover:text-white transition-colors">Learn the Basics →</a>
         <a href="https://galoy.io" target="_blank" class="text-sm text-gray-400 hover:text-white transition-colors">galoy.io</a>
       </div>
