--- a/regulatory-radar.html
+++ b/regulatory-radar.html
@@ -104,20 +104,6 @@
           </p>
         </div>
 
-        <div class="card rounded-xl p-4 mb-10 flex flex-wrap items-center gap-6">
-          <span class="text-sm text-gray-400 font-medium">Crypto Relevance:</span>
-          <div class="flex items-center gap-2">
-            <span class="w-3 h-3 rounded-full bg-emerald-500"></span>
-            <span class="text-sm text-gray-300">Direct</span>
-            <span class="text-xs text-gray-500 ml-1">— Crypto, bitcoin, stablecoins, DLT</span>
-          </div>
-          <div class="flex items-center gap-2">
-            <span class="w-3 h-3 rounded-full bg-amber-500"></span>
-            <span class="text-sm text-gray-300">Adjacent</span>
-            <span class="text-xs text-gray-500 ml-1">— Debanking, fintech, payments innovation</span>
-          </div>
-        </div>
-
         <div class="mb-10">
           <h2 class="text-xl font-bold mb-6 flex items-center gap-3">
             <span class="w-8 h-8 rounded-lg flex items-center justify-center" style="background: rgba(54, 84, 255, 0.2);">
@@ -169,6 +155,19 @@
         <div class="mb-8">
           <h1 class="text-3xl font-bold mb-4">Data Explorer</h1>
           <p class="text-gray-400">Search and filter crypto-relevant regulatory signals.</p>
+        </div>
+        <div class="card rounded-xl p-4 mb-6 flex flex-wrap items-center gap-6">
+          <span class="text-sm text-gray-400 font-medium">Crypto Relevance:</span>
+          <div class="flex items-center gap-2">
+            <span class="w-3 h-3 rounded-full bg-emerald-500"></span>
+            <span class="text-sm text-gray-300">Direct</span>
+            <span class="text-xs text-gray-500 ml-1">— Crypto, bitcoin, stablecoins, DLT</span>
+          </div>
+          <div class="flex items-center gap-2">
+            <span class="w-3 h-3 rounded-full bg-amber-500"></span>
+            <span class="text-sm text-gray-300">Adjacent</span>
+            <span class="text-xs text-gray-500 ml-1">— Debanking, fintech, payments innovation</span>
+          </div>
         </div>
         <div class="card rounded-2xl p-4 mb-6">
           <div class="flex flex-wrap gap-4 items-center">
@@ -589,7 +588,7 @@
       }).join('');
     }
 
-    // Render Featured Signals (now "Latest Signals")
+    // Render Latest Signals (formerly Featured Signals)
     function renderFeaturedSignals() {
       const container = document.getElementById('featuredSignals');
       const featured = relevantData.filter(d => d.LeadSignal === 'High' && getCryptoRelevance(d) === 'direct').slice(0, 6);
@@ -697,11 +696,9 @@
       document.getElementById('filteredCount').textContent = data.length;
     }
 
-    // Update Stats (uses relevantData which excludes general signals)
+    // Update Stats (stats cards removed, keeping function for compatibility)
     function updateStats() {
-      const direct = relevantData.filter(d => getCryptoRelevance(d) === 'direct').length;
-      const adjacent = relevantData.filter(d => getCryptoRelevance(d) === 'adjacent').length;
-      // Stats cards have been removed, but keeping this function for potential future use
+      // Stats cards have been removed from the UI
     }
 
     // Filter Data (uses relevantData which excludes general signals)
