--- a/galoy-new-site/pages/company/about.html
+++ b/galoy-new-site/pages/company/about.html
@@ -171,7 +171,7 @@
   <section class="section">
     <div class="container container-sm">
       <h2 class="text-center">Our Mission</h2>
-      <p class="text-lg text-center">At Galoy, we are building the future of banking by developing a financial infrastructure stack on top of the Bitcoin network. Our platform includes both open source and Fair Source licensed projects, fostering collaboration and contribution across the ecosystem.</p>
+      <p class="text-lg text-center">At Galoy, we are building the future of banking by developing a financial infrastructure stack on top of the Bitcoin network. Our platform is designed to foster collaboration and enable institutions to build on Bitcoin.</p>
       <p class="text-center">With it, we enable institutions to connect to and offer financial services on Bitcoin.</p>
     </div>
   </section>
@@ -296,7 +296,7 @@
             </li>
             <li style="display: flex; align-items: center; gap: var(--space-3); margin-bottom: var(--space-3);">
               <span class="material-symbols-outlined" style="color: var(--galoy-blue);">code</span>
-              Open source contributors welcome
+              Developers and contributors welcome
             </li>
             <li style="display: flex; align-items: center; gap: var(--space-3);">
               <span class="material-symbols-outlined" style="color: var(--galoy-blue);">groups</span>
