--- a/galoy-new-site/pages/company/careers.html
+++ b/galoy-new-site/pages/company/careers.html
@@ -173,7 +173,7 @@
       <div class="split-feature">
         <div class="split-feature-content">
           <h2>Why Galoy?</h2>
-          <p>Join a team of Bitcoiners developing banking infrastructure for open source money. We're building the financial rails that will power the next generation of banking.</p>
+          <p>Join a team of Bitcoiners developing banking infrastructure for Bitcoin. We're building the financial rails that will power the next generation of banking.</p>
 
           <div style="margin-top: var(--space-8);">
             <div style="display: flex; align-items: flex-start; gap: var(--space-4); margin-bottom: var(--space-6);">
@@ -191,8 +191,8 @@
                 <span class="material-symbols-outlined" style="color: white;">code</span>
               </div>
               <div>
-                <h4 style="margin-bottom: var(--space-2);">Open Source</h4>
-                <p class="mb-0 text-grey">Contribute to projects that matter. Our work is open for the world to see and use.</p>
+                <h4 style="margin-bottom: var(--space-2);">Impactful Work</h4>
+                <p class="mb-0 text-grey">Contribute to projects that matter. Build infrastructure used by institutions worldwide.</p>
               </div>
             </div>
 
@@ -254,7 +254,7 @@
             </div>
             <span class="material-symbols-outlined" style="color: var(--galoy-blue);">arrow_forward</span>
           </div>
-          <p style="margin-top: var(--space-3); margin-bottom: 0; color: var(--font-grey);">Expand and optimize our open source Bitcoin-based financial infrastructure.</p>
+          <p style="margin-top: var(--space-3); margin-bottom: 0; color: var(--font-grey);">Expand and optimize our Bitcoin-based financial infrastructure.</p>
         </a>
 
         <!-- Position 4 -->
@@ -306,7 +306,7 @@
         <div class="card">
           <span class="material-symbols-outlined" style="font-size: 48px; color: var(--galoy-blue); margin-bottom: var(--space-4);">bug_report</span>
           <h4>Fix a #goodfirstissue</h4>
-          <p class="mb-0">Contribute to our open source projects on GitHub and get familiar with our codebase.</p>
+          <p class="mb-0">Contribute to our projects on GitHub and get familiar with our codebase.</p>
           <a href="https://github.com/galoymoney" target="_blank" class="btn btn-secondary btn-sm" style="margin-top: var(--space-4);">View on GitHub</a>
         </div>
 
