--- a/galoy-new-site/pages/company/contact.html
+++ b/galoy-new-site/pages/company/contact.html
@@ -327,8 +327,8 @@
               <h4 style="font-size: var(--font-size-base); margin-bottom: var(--space-2);">Do you work with banks outside the US?</h4>
               <p class="text-sm text-grey mb-4">Yes, Galoy works with financial institutions globally. Our infrastructure is designed to accommodate various regulatory frameworks.</p>
 
-              <h4 style="font-size: var(--font-size-base); margin-bottom: var(--space-2);">Is Galoy open source?</h4>
-              <p class="text-sm text-grey mb-0">Yes, our core infrastructure is open source and available on <a href="https://github.com/galoymoney" target="_blank" rel="noopener" style="color: var(--galoy-blue);">GitHub</a>.</p>
+              <h4 style="font-size: var(--font-size-base); margin-bottom: var(--space-2);">Can we review your code?</h4>
+              <p class="text-sm text-grey mb-0">Yes, our code is available for review on <a href="https://github.com/galoymoney" target="_blank" rel="noopener" style="color: var(--galoy-blue);">GitHub</a>.</p>
             </div>
           </div>
         </div>
