--- a/galoy-new-site/pages/company/index.html
+++ b/galoy-new-site/pages/company/index.html
@@ -264,8 +264,8 @@
           <p class="mb-0 text-grey">Countries</p>
         </div>
         <div>
-          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">100%</span>
-          <p class="mb-0 text-grey">Open Source</p>
+          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">24/7</span>
+          <p class="mb-0 text-grey">Support</p>
         </div>
       </div>
     </div>
