--- a/galoy-new-site/pages/company/press.html
+++ b/galoy-new-site/pages/company/press.html
@@ -279,7 +279,7 @@
     <div class="container container-sm">
       <h2 class="text-center mb-8">About Galoy</h2>
       <div class="card" style="padding: var(--space-8);">
-        <p style="font-size: var(--font-size-lg); line-height: 1.8;">Galoy builds core banking and payments infrastructure that enables traditional and de novo banks to launch products on Bitcoin. The company's open-source technology stack includes Lana (Bitcoin-backed lending platform), Cala (core accounting ledger), and Bria (Bitcoin payments bridge).</p>
+        <p style="font-size: var(--font-size-lg); line-height: 1.8;">Galoy builds core banking and payments infrastructure that enables traditional and de novo banks to launch products on Bitcoin. The company's technology stack includes Lana (Bitcoin-backed lending platform), Cala (core accounting ledger), and Bria (Bitcoin payments bridge).</p>
 
         <p style="font-size: var(--font-size-lg); line-height: 1.8;">Galoy is ISO 27001 certified and works with financial institutions globally to bring Bitcoin capabilities to regulated banking. The company offers two implementation paths: the Sidecar Model for existing banks adding Bitcoin alongside their current core, and Primary Core for new Bitcoin-first institutions.</p>
 
@@ -327,8 +327,8 @@
             <img src="../../images/press-placeholder.svg" alt="Publication" style="height: 24px;">
             <span class="text-sm text-grey">November 2025</span>
           </div>
-          <h4 style="color: var(--galoy-grey);">Open Source Infrastructure: The Future of Banking Technology</h4>
-          <p class="text-grey text-sm mb-0">Feature on Galoy's open source approach to banking software.</p>
+          <h4 style="color: var(--galoy-grey);">Modern Infrastructure: The Future of Banking Technology</h4>
+          <p class="text-grey text-sm mb-0">Feature on Galoy's modern approach to banking software.</p>
         </a>
       </div>
     </div>
