--- a/galoy-new-site/pages/company/security.html
+++ b/galoy-new-site/pages/company/security.html
@@ -316,12 +316,12 @@
     </div>
   </section>
 
-  <!-- Open Source -->
+  <!-- Code Transparency -->
   <section class="section section-grey">
     <div class="container container-sm text-center">
       <span class="material-symbols-outlined" style="font-size: 64px; color: var(--galoy-blue); margin-bottom: var(--space-4);">code</span>
-      <h2>Open Source Transparency</h2>
-      <p class="text-lg">Galoy's core infrastructure is open source, allowing for independent security review by the global developer community. Transparency builds trust.</p>
+      <h2>Code Transparency</h2>
+      <p class="text-lg">Galoy's infrastructure is available for independent security review by clients and partners. Transparency builds trust.</p>
       <div class="flex gap-4 justify-center">
         <a href="https://github.com/galoymoney" class="btn btn-primary" target="_blank" rel="noopener">View on GitHub</a>
         <a href="contact.html" class="btn btn-secondary">Security Inquiries</a>
