--- a/galoy-new-site/pages/products/cala.html
+++ b/galoy-new-site/pages/products/cala.html
@@ -337,7 +337,7 @@
             </div>
             <div style="display: flex; justify-content: space-between; padding: var(--space-3) 0;">
               <span class="text-grey">License</span>
-              <span><strong>Open source (MIT)</strong></span>
+              <span><strong>Available on GitHub</strong></span>
             </div>
           </div>
         </div>
