--- a/galoy-new-site/pages/products/index.html
+++ b/galoy-new-site/pages/products/index.html
@@ -285,13 +285,13 @@
     </div>
   </section>
 
-  <!-- ========== OPEN SOURCE ========== -->
+  <!-- ========== CODE TRANSPARENCY ========== -->
   <section class="section">
     <div class="container">
       <div class="split-feature">
         <div class="split-feature-content">
-          <h2>Built on Open Source</h2>
-          <p>Galoy's platform includes both open source and Fair Source licensed projects, fostering collaboration and contribution across the ecosystem.</p>
+          <h2>Built for Transparency</h2>
+          <p>Galoy's platform is designed for collaboration and contribution, enabling institutions to build confidently on Bitcoin.</p>
           <ul style="list-style: none; margin: var(--space-6) 0;">
             <li style="display: flex; align-items: center; gap: var(--space-3); margin-bottom: var(--space-3);">
               <span class="material-symbols-outlined" style="color: var(--galoy-blue);">code</span>
