--- a/galoy-new-site/pages/research/guides/index.html
+++ b/galoy-new-site/pages/research/guides/index.html
@@ -300,9 +300,9 @@
             <img src="../../../images/blog-placeholder.svg" alt="">
           </div>
           <div class="blog-card-content">
-            <div class="blog-card-meta">Open Source · 20 min read</div>
-            <h3 class="blog-card-title">Open Source Banking Infrastructure</h3>
-            <p class="blog-card-excerpt">Why open source matters for banking software and how to evaluate it.</p>
+            <div class="blog-card-meta">Infrastructure · 20 min read</div>
+            <h3 class="blog-card-title">Modern Banking Infrastructure</h3>
+            <p class="blog-card-excerpt">Key considerations for evaluating banking software infrastructure.</p>
           </div>
         </a>
       </div>
