--- a/galoy-new-site/pages/solutions/primary-core.html
+++ b/galoy-new-site/pages/solutions/primary-core.html
@@ -291,7 +291,7 @@
               <span class="material-symbols-outlined" style="color: white;">code</span>
             </div>
             <div>
-              <h3 style="margin-bottom: var(--space-2);">Open Source Foundation</h3>
+              <h3 style="margin-bottom: var(--space-2);">Transparent Foundation</h3>
               <p class="text-grey mb-0">No vendor lock-in. Full visibility into the code running your bank. Active community and transparent development.</p>
             </div>
           </div>
