--- a/galoy-new-site/pages/terms.html
+++ b/galoy-new-site/pages/terms.html
@@ -181,7 +181,7 @@
         </ul>
 
         <h2>4. Intellectual Property</h2>
-        <p>The content on this website, including text, graphics, logos, and software, is the property of Galoy Inc. or its licensors and is protected by intellectual property laws. Our open-source software is licensed under the MIT License and available on GitHub.</p>
+        <p>The content on this website, including text, graphics, logos, and software, is the property of Galoy Inc. or its licensors and is protected by intellectual property laws. Our software is available on GitHub under various licenses.</p>
 
         <h2>5. Third-Party Links</h2>
         <p>This website may contain links to third-party websites. We are not responsible for the content or practices of any linked sites. Such links do not imply endorsement.</p>
