--- a/galoy-new-site/pages/company/index.html
+++ b/galoy-new-site/pages/company/index.html
@@ -256,11 +256,11 @@
           <p class="mb-0 text-grey">Founded</p>
         </div>
         <div>
-          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">30+</span>
+          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">17</span>
           <p class="mb-0 text-grey">Team Members</p>
         </div>
         <div>
-          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">15+</span>
+          <span style="font-size: 48px; font-weight: 700; color: var(--galoy-blue);">10</span>
           <p class="mb-0 text-grey">Countries</p>
         </div>
         <div>
