--- a/galoy-new-site/pages/research/bitcoin-banking-101/index 2.html
+++ b/galoy-new-site/pages/research/bitcoin-banking-101/index 2.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -105,6 +106,79 @@
 
         .nav-link:hover {
             color: var(--text-gray);
+        }
+
+        /* Nav Item with Dropdown */
+        .nav-item {
+            position: relative;
+        }
+
+        .nav-link-dropdown {
+            display: flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        .nav-dropdown-icon {
+            font-size: 18px;
+            transition: transform 0.2s;
+        }
+
+        .nav-item:hover .nav-dropdown-icon {
+            transform: rotate(180deg);
+        }
+
+        /* Dropdown Menu */
+        .dropdown-menu {
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            min-width: 220px;
+            background: #111;
+            border: 1px solid var(--border-color);
+            padding: 8px 0;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.2s;
+            z-index: 1000;
+            margin-top: 8px;
+        }
+
+        .nav-item:hover .dropdown-menu {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .dropdown-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 10px 16px;
+            color: var(--text-light-gray);
+            text-decoration: none;
+            font-size: 14px;
+            transition: all 0.15s;
+        }
+
+        .dropdown-item:hover {
+            background: rgba(54, 84, 255, 0.1);
+            color: var(--text-white);
+        }
+
+        .dropdown-item .material-symbols-outlined {
+            font-size: 20px;
+            color: var(--text-gray);
+        }
+
+        .dropdown-item:hover .material-symbols-outlined {
+            color: var(--primary-blue);
+        }
+
+        .dropdown-divider {
+            height: 1px;
+            background: var(--border-color);
+            margin: 8px 0;
         }
 
         .header-social-icons {
@@ -638,16 +712,121 @@
                     <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/656106c240ef09d6b11f4673_logo.svg" loading="lazy" alt="Galoy" class="logo">
                 </a>
                 <ul class="nav-menu">
-                    <li><a href="https://www.galoy.io/about" class="nav-link">About</a></li>
-                    <li><a href="https://www.galoy.io/bitcoin-core-banking-products" class="nav-link">Products</a></li>
-                    <li><a href="https://www.galoy.io/blog-posts/blog" class="nav-link">Blog</a></li>
-                    <li><a href="https://www.galoy.io/join-the-team" class="nav-link">Join the team</a></li>
+                    <li><a href="../../../index.html" class="nav-link">Home</a></li>
+
+                    <li class="nav-item">
+                        <a href="../../products/index.html" class="nav-link nav-link-dropdown">
+                            Products
+                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="../../products/index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">apps</span>
+                                All Products
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a href="../../products/lana.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">request_quote</span>
+                                Lana - Bitcoin Lending
+                            </a>
+                            <a href="../../products/cala.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">account_balance_wallet</span>
+                                Cala - Accounting Ledger
+                            </a>
+                            <a href="../../products/bria.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">bolt</span>
+                                Bria - Payments Bridge
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="../../solutions/index.html" class="nav-link nav-link-dropdown">
+                            Solutions
+                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="../../solutions/index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">compare</span>
+                                Compare Solutions
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a href="../../solutions/sidecar.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">add_circle</span>
+                                Sidecar Model
+                            </a>
+                            <a href="../../solutions/primary-core.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">hub</span>
+                                Primary Core
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="../index.html" class="nav-link nav-link-dropdown">
+                            Research
+                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="../index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">library_books</span>
+                                All Research
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a href="index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">school</span>
+                                Bitcoin Banking 101
+                            </a>
+                            <a href="../case-studies/index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">cases</span>
+                                Case Studies
+                            </a>
+                            <a href="../regulatory/index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">gavel</span>
+                                Regulatory Radar
+                            </a>
+                            <a href="../guides/index.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">menu_book</span>
+                                Guides & Playbooks
+                            </a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="../../company/index.html" class="nav-link nav-link-dropdown">
+                            Company
+                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a href="../../company/about.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">info</span>
+                                About
+                            </a>
+                            <a href="../../company/careers.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">work</span>
+                                Careers
+                            </a>
+                            <a href="../../company/security.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">shield</span>
+                                Security
+                            </a>
+                            <a href="../../company/press.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">newspaper</span>
+                                Press & Media
+                            </a>
+                            <div class="dropdown-divider"></div>
+                            <a href="../../company/contact.html" class="dropdown-item">
+                                <span class="material-symbols-outlined">mail</span>
+                                Contact Us
+                            </a>
+                        </div>
+                    </li>
                 </ul>
                 <div class="header-social-icons">
                     <a href="https://twitter.com/GaloyMoney" target="_blank" class="header-icon-link">
                         <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/655ff5fd54fed21ec663fc70_x-icon.svg" loading="lazy" alt="X" class="header-icon">
                     </a>
-                    <a href="https://github.com/GaloyMoney" target="_blank" class="header-icon-link">
+                    <a href="https://github.com/galoymoney" target="_blank" class="header-icon-link">
                         <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/655ff5fef3d4df47892c63cf_logo-github.svg" loading="lazy" alt="GitHub" class="header-icon">
                     </a>
                     <a href="https://www.linkedin.com/company/galoymoney" target="_blank" class="header-icon-link">
@@ -664,6 +843,9 @@
             <div class="hero-wrapper">
                 <div class="hero-split-text">
                     <div class="es-40"></div>
+                    <span style="display: inline-flex; align-items: center; gap: 8px; padding: 8px 20px; background: linear-gradient(135deg, #3654FF 0%, #1e3a8a 100%); border-radius: 999px; font-size: 13px; font-weight: 600; letter-spacing: 0.08em; text-transform: uppercase; color: #fff; margin-bottom: 24px; box-shadow: 0 4px 15px rgba(54, 84, 255, 0.4);">
+                        <span class="material-symbols-outlined" style="font-size: 18px;">school</span> Research
+                    </span>
                     <h1>Bitcoin Banking <span class="animated-underline">101</span></h1>
                     <div class="es-20"></div>
                     <p class="title-desc">A comprehensive guide for banking executives and decision-makers exploring how Bitcoin is reshaping financial services – from disruption to practical implementation.</p>
@@ -729,7 +911,7 @@
             <p class="title-desc">The complete series covers everything from Bitcoin fundamentals to practical ROE analysis.</p>
 
             <div class="series-grid">
-                <a href="part-a.html" class="series-card">
+                <a href="bitcoin-banking-101-part-a.html" class="series-card">
                     <div class="card-header">
                         <div class="part-badge">Part A</div>
                         <div class="read-time">8 min read</div>
@@ -749,7 +931,7 @@
                     </div>
                 </a>
 
-                <a href="part-b.html" class="series-card">
+                <a href="bitcoin-banking-101-part-b.html" class="series-card">
                     <div class="card-header">
                         <div class="part-badge">Part B</div>
                         <div class="read-time">10 min read</div>
@@ -769,7 +951,7 @@
                     </div>
                 </a>
 
-                <a href="part-c.html" class="series-card">
+                <a href="bitcoin-banking-101-part-c.html" class="series-card">
                     <div class="card-header">
                         <div class="part-badge">Part C</div>
                         <div class="read-time">9 min read</div>
@@ -789,7 +971,7 @@
                     </div>
                 </a>
 
-                <a href="part-d.html" class="series-card">
+                <a href="bitcoin-banking-101-part-d.html" class="series-card">
                     <div class="card-header">
                         <div class="part-badge">Part D</div>
                         <div class="read-time">8 min read</div>
