--- a/galoy-new-site/pages/research/bitcoin-banking-101/part-a.html
+++ b/galoy-new-site/pages/research/bitcoin-banking-101/part-a.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -106,79 +105,6 @@
 
         .nav-link:hover {
             color: var(--text-gray);
-        }
-
-        /* Nav Item with Dropdown */
-        .nav-item {
-            position: relative;
-        }
-
-        .nav-link-dropdown {
-            display: flex;
-            align-items: center;
-            gap: 4px;
-        }
-
-        .nav-dropdown-icon {
-            font-size: 18px;
-            transition: transform 0.2s;
-        }
-
-        .nav-item:hover .nav-dropdown-icon {
-            transform: rotate(180deg);
-        }
-
-        /* Dropdown Menu */
-        .dropdown-menu {
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            transform: translateX(-50%);
-            min-width: 220px;
-            background: #111;
-            border: 1px solid var(--border-color);
-            padding: 8px 0;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.2s;
-            z-index: 1000;
-            margin-top: 8px;
-        }
-
-        .nav-item:hover .dropdown-menu {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .dropdown-item {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            padding: 10px 16px;
-            color: var(--text-light-gray);
-            text-decoration: none;
-            font-size: 14px;
-            transition: all 0.15s;
-        }
-
-        .dropdown-item:hover {
-            background: rgba(54, 84, 255, 0.1);
-            color: var(--text-white);
-        }
-
-        .dropdown-item .material-symbols-outlined {
-            font-size: 20px;
-            color: var(--text-gray);
-        }
-
-        .dropdown-item:hover .material-symbols-outlined {
-            color: var(--primary-blue);
-        }
-
-        .dropdown-divider {
-            height: 1px;
-            background: var(--border-color);
-            margin: 8px 0;
         }
 
         .header-social-icons {
@@ -696,121 +622,16 @@
                     <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/656106c240ef09d6b11f4673_logo.svg" loading="lazy" alt="Galoy" class="logo">
                 </a>
                 <ul class="nav-menu">
-                    <li><a href="../../../index.html" class="nav-link">Home</a></li>
-
-                    <li class="nav-item">
-                        <a href="../../products/index.html" class="nav-link nav-link-dropdown">
-                            Products
-                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a href="../../products/index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">apps</span>
-                                All Products
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="../../products/lana.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">request_quote</span>
-                                Lana - Bitcoin Lending
-                            </a>
-                            <a href="../../products/cala.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">account_balance_wallet</span>
-                                Cala - Accounting Ledger
-                            </a>
-                            <a href="../../products/bria.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">bolt</span>
-                                Bria - Payments Bridge
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="../../solutions/index.html" class="nav-link nav-link-dropdown">
-                            Solutions
-                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a href="../../solutions/index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">compare</span>
-                                Compare Solutions
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="../../solutions/sidecar.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">add_circle</span>
-                                Sidecar Model
-                            </a>
-                            <a href="../../solutions/primary-core.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">hub</span>
-                                Primary Core
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="../index.html" class="nav-link nav-link-dropdown">
-                            Research
-                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a href="../index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">library_books</span>
-                                All Research
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">school</span>
-                                Bitcoin Banking 101
-                            </a>
-                            <a href="../case-studies/index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">cases</span>
-                                Case Studies
-                            </a>
-                            <a href="../regulatory/index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">gavel</span>
-                                Regulatory Radar
-                            </a>
-                            <a href="../guides/index.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">menu_book</span>
-                                Guides & Playbooks
-                            </a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="../../company/index.html" class="nav-link nav-link-dropdown">
-                            Company
-                            <span class="material-symbols-outlined nav-dropdown-icon">expand_more</span>
-                        </a>
-                        <div class="dropdown-menu">
-                            <a href="../../company/about.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">info</span>
-                                About
-                            </a>
-                            <a href="../../company/careers.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">work</span>
-                                Careers
-                            </a>
-                            <a href="../../company/security.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">shield</span>
-                                Security
-                            </a>
-                            <a href="../../company/press.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">newspaper</span>
-                                Press & Media
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <a href="../../company/contact.html" class="dropdown-item">
-                                <span class="material-symbols-outlined">mail</span>
-                                Contact Us
-                            </a>
-                        </div>
-                    </li>
+                    <li><a href="https://www.galoy.io/about" class="nav-link">About</a></li>
+                    <li><a href="https://www.galoy.io/bitcoin-core-banking-products" class="nav-link">Products</a></li>
+                    <li><a href="https://www.galoy.io/blog-posts/blog" class="nav-link">Blog</a></li>
+                    <li><a href="https://www.galoy.io/join-the-team" class="nav-link">Join the team</a></li>
                 </ul>
                 <div class="header-social-icons">
                     <a href="https://twitter.com/GaloyMoney" target="_blank" class="header-icon-link">
                         <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/655ff5fd54fed21ec663fc70_x-icon.svg" loading="lazy" alt="X" class="header-icon">
                     </a>
-                    <a href="https://github.com/galoymoney" target="_blank" class="header-icon-link">
+                    <a href="https://github.com/GaloyMoney" target="_blank" class="header-icon-link">
                         <img src="https://cdn.prod.website-files.com/646f9b77a45b9e4c4377b0a2/655ff5fef3d4df47892c63cf_logo-github.svg" loading="lazy" alt="GitHub" class="header-icon">
                     </a>
                     <a href="https://www.linkedin.com/company/galoymoney" target="_blank" class="header-icon-link">
@@ -826,7 +647,7 @@
         <div class="container">
             <div class="article-hero-inner">
                 <div class="breadcrumb">
-                    <a href="bitcoin-banking-101-landing.html">Bitcoin Banking 101</a>
+                    <a href="index.html">Bitcoin Banking 101</a>
                     <span>/</span>
                     <span>Part A</span>
                 </div>
@@ -867,19 +688,19 @@
         <div class="container">
             <div class="series-nav-label">Complete Series</div>
             <div class="series-parts">
-                <a href="bitcoin-banking-101-part-a.html" class="series-part active">
+                <a href="part-a.html" class="series-part active">
                     <div class="part-number">Part A</div>
                     <div class="part-title">Bitcoin Is Disruptive, Not Destructive</div>
                 </a>
-                <a href="bitcoin-banking-101-part-b.html" class="series-part">
+                <a href="part-b.html" class="series-part">
                     <div class="part-number">Part B</div>
                     <div class="part-title">Why Customers Are Adopting Bitcoin</div>
                 </a>
-                <a href="bitcoin-banking-101-part-c.html" class="series-part">
+                <a href="part-c.html" class="series-part">
                     <div class="part-number">Part C</div>
                     <div class="part-title">Bitcoin Products as Retention Strategy</div>
                 </a>
-                <a href="bitcoin-banking-101-part-d.html" class="series-part">
+                <a href="part-d.html" class="series-part">
                     <div class="part-number">Part D</div>
                     <div class="part-title">ROE Thought Experiment</div>
                 </a>
@@ -984,7 +805,7 @@
             <p>The takeaway for a banker is clear: Bitcoin's core properties are driving a fundamental change in how value can be stored, moved, and leveraged - and banks must adapt. This isn't about endorsing a fad or taking an ideological stance; it's about responding to a new financial architecture that is emerging organically.</p>
         </div>
 
-        <a href="bitcoin-banking-101-part-b.html" class="next-article">
+        <a href="part-b.html" class="next-article">
             <div>
                 <div class="next-label">Up Next: Part B</div>
                 <div class="next-title">Why Customers Are Adopting Bitcoin</div>
